// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForkAwesomeStack renders a heart and a download icon stack 1`] = `
<div>
  <span
    class="fa-stack "
  >
    <i
      class="fa  fa-heart  fa-stack-1x"
    />
    <i
      class="fa  fa-download  fa-stack-1x"
    />
  </span>
</div>
`;

exports[`ForkAwesomeStack renders in size 2x 1`] = `
<div>
  <span
    class="fa-stack fa-2x"
  >
    <i
      class="fa  fa-heart  fa-stack-1x"
    />
    <i
      class="fa  fa-download  fa-stack-1x"
    />
  </span>
</div>
`;

exports[`ForkAwesomeStack renders in size 3x 1`] = `
<div>
  <span
    class="fa-stack fa-3x"
  >
    <i
      class="fa  fa-heart  fa-stack-1x"
    />
    <i
      class="fa  fa-download  fa-stack-1x"
    />
  </span>
</div>
`;

exports[`ForkAwesomeStack renders in size 4x 1`] = `
<div>
  <span
    class="fa-stack fa-4x"
  >
    <i
      class="fa  fa-heart  fa-stack-1x"
    />
    <i
      class="fa  fa-download  fa-stack-1x"
    />
  </span>
</div>
`;

exports[`ForkAwesomeStack renders in size 5x 1`] = `
<div>
  <span
    class="fa-stack fa-5x"
  >
    <i
      class="fa  fa-heart  fa-stack-1x"
    />
    <i
      class="fa  fa-download  fa-stack-1x"
    />
  </span>
</div>
`;
